Changes for 1.9.7

New features:
 - [ZBX-3999] fixed map border (Alex,Sasha,Eduard)
 - [ZBXNEXT-918] redesign Administration->Media types (Eduard)
 - [ZBXNEXT-915] redesign Administration->Authentication (Eduard)
 - [ZBXNEXT-966] update jQuery to 1.6.4 (Eduard)
 - [ZBX-1357] updated Dutch, German, Japanese, Russian, and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
 - [ZBX-4105] fixed removal of host groups in configuration of dashboard, thanks to Pustovalov Alexey (Alexei)
 - [ZBX-3939] fixed warning messages when looking at the history of several selected log items (Alexei)
 - [ZBX-3493] fixed warnings when removing and clearing a template (Alexei)
 - [ZBX-4143] fixed cases with upgrade patch sometimes attempting to reference tables that were not created yet (Richlv, Sasha)
 - [ZBX-3618] extended allowed syntax for host interface dns names (Vedmak)
 - [ZBX-3946] fixed errors when create trigger with dependencies (Vedmak)
 - [ZBX-3921] fixed change link shown for maps in slide show (Vedmak)
 - [ZBX-4082] fixed error in Monitoring->Triggers when acknowledges are disabled (Vedmak)
 - [ZBX-4080] fixed host header info shown for creation form (Vedmak)
 - [ZBX-3987] fixed errors when change host in Monitoring->Graphs (Vedmak)
 - [ZBX-4114] fixed icon maps form height on dragging (Vedmak)
 - [ZBX-4101] fixed excess borders in screen cell configuration form (Vedmak)
 - [ZBX-3786] fixed incorrect inheritance of items when template is linked to another template linked to host (Vedmak)
 - [ZBX-1207] fixed host full clone with custom graphs (Vedmak)

--------------------------------------------------------------------------------
Changes for 1.9.6

New features:
 - [ZBXNEXT-747] added direct SNMP trap monitoring for snmptrapd and embed perl or SNMPTT (Eduard, rudolfs, Vedmak)
 - [ZBX-4116] fixed ibm_db2 update patch for help_items table (rudolfs)
 - [ZBXNEXT-895] redesign general->Macros (Eduard)
 - [ZBXNEXT-899] redesign general->Images (Eduard)